--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -404,6 +404,23 @@
 									</div>
 								</div>
 
+								<div class="item form-group">
+									<div class="col-sm-offset-3 col-xs-12 col-sm-8 col-md-8 col-lg-8">
+										<div class="radio">
+											<label>
+												<input type="radio" class="flat" th:field="${ricercaEventoWrapper.ricercaEsclusivaDocenti}" th:value="${false}" />
+												<span th:text="#{label.ricerca_docenti_or}"></span>
+											</label>
+										</div>
+										<div class="radio">
+											<label>
+												<input type="radio" class="flat" th:field="${ricercaEventoWrapper.ricercaEsclusivaDocenti}" th:value="${true}" />
+												<span th:text="#{label.ricerca_docenti_and}"></span>
+											</label>
+										</div>
+									</div>
+								</div>
+
 								<div class="personeEvento-container item form-group">
 									<div class="col-sm-offset-1 col-xs-12 col-sm-10 col-md-10 col-lg-10" id="containerDocentiSelezionati">
 										<!-- riepito dinamicamente -->
