--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -17,8 +17,8 @@
 									th:if="${canInsertPianoFormativo}"
 									data-toggle="modal" data-target=".modal-pianoFormativoNew"
 									th:text="#{label.nuovo_piano_formativo}">label.nuovo_piano_formativo</button>
-							<a class="btn btn-primary pull-right" th:if="${#authentication.principal.hasProfile('PROVIDER')}" th:text="#{label.indietro}" th:href="@{|/home|}"></a>
-							<a class="btn btn-primary pull-right" th:unless="${#authentication.principal.hasProfile('PROVIDER')}" th:text="#{label.indietro}" th:href="@{|/provider/list|}"></a>
+							<a class="btn btn-primary pull-right" th:if="${#authentication.principal.account.isProviderVisualizzatore()}" th:text="#{label.indietro}" th:href="@{|/home|}"></a>
+							<a class="btn btn-primary pull-right" th:unless="${#authentication.principal.account.isProviderVisualizzatore()}" th:text="#{label.indietro}" th:href="@{|/provider/list|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
