--- a/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeList.html
+++ b/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeList.html
@@ -15,8 +15,8 @@
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
 								<a class="btn btn-success pull-right" th:if="${canInsertRelazioneAnnuale}" th:text="#{label.inserisci_relazione_annuale}" th:href="@{|/provider/${providerId}/relazioneAnnuale/insert|}"></a>
-								<a class="btn btn-primary pull-right" th:if="${#authentication.principal.hasProfile('PROVIDER')}" th:text="#{label.indietro}" th:href="@{|/home|}"></a>
-								<a class="btn btn-primary pull-right" th:unless="${#authentication.principal.hasProfile('PROVIDER')}" th:text="#{label.indietro}" th:href="@{|/provider/list|}"></a>
+								<a class="btn btn-primary pull-right" th:if="${#authentication.principal.account.isProviderVisualizzatore()}" th:text="#{label.indietro}" th:href="@{|/home|}"></a>
+								<a class="btn btn-primary pull-right" th:unless="${#authentication.principal.account.isProviderVisualizzatore()}" th:text="#{label.indietro}" th:href="@{|/provider/list|}"></a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -43,7 +43,7 @@
 									<td th:text="${relazione.annoRiferimento}"></td>
 									<td>
 										<div class="button-container single">
-											<a th:if="${relazione.isRelazioneModificabile()}" class="btn btn-primary btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.inserisci}"> </span></a>
+											<a th:if="${relazione.isRelazioneModificabile() and (#authentication.principal.account.isProvider() or #authentication.principal.account.isSegreteria())}" class="btn btn-primary btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.inserisci}"> </span></a>
 											<a class="btn btn-info btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/show|}"><i class="fa fa-eye"> </i> <span th:text="#{label.mostra}"> </span></a>
 										</div>
 									</td>
