--- a/src/main/resources/templates/comunicazione/comunicazioneNew.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneNew.html
@@ -294,7 +294,7 @@
 						applyFilters(filtriProvider);
 					})
 
-					if([[${comunicazioneWrapper.comunicazione.ambito}]]) {
+					if([[${comunicazioneWrapper.comunicazione.ambito != null}]]) {
 						initTipologia();
 					}
 
