fix ricerca docenti

--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -747,6 +747,11 @@
 
 								$('#dataScadenzaPagamentoStart').val('');
 								$('#dataScadenzaPagamentoEnd').val('');
+
+								//pulisci docenti
+								docentiHandler = {counter: -1, docenti: []};
+								$("#containerDocentiSelezionati").empty();
+
 							}
 
 							//oggetto js per la gestione dei docenti
