--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -60,6 +60,9 @@
 		<script src="../static/gentella/js/datatables/dataTables.responsive.min.js"
 				th:src="@{/gentella/js/datatables/dataTables.responsive.min.js}"></script>
 
+		<script src="../static/gentella/js/datatables/sorting-date-eu.js"
+				th:src="@{/gentella/js/datatables/sorting-date-eu.js}"></script>
+
 		<!-- Switch dei form -->
 		<script src="../static/gentella/js/switchery/switchery.min.js"
 				th:src="@{/gentella/js/switchery/switchery.min.js}"></script>
