--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -23,18 +23,18 @@
 							<table th:unless="${#lists.isEmpty(listaComunicazioni)}" id="datatable-comunicazione" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 								<thead>
 									<tr>
-										<th th:text="#{label.data_ultima_risposta}"></th>
+										<th th:text="#{label.oggetto_list}"></th>
 										<th th:text="#{label.mittente}"></th>
 										<th th:text="#{label.destinatari}"></th>
 										<th th:text="#{label.ambito_list}"></th>
 										<th th:text="#{label.tipologia_list}"></th>
-										<th th:text="#{label.oggetto_list}"></th>
+										<th th:text="#{label.data_ultima_risposta}"></th>
 										<th th:text="#{label.stato}"></th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr th:each="comunicazione, row : ${listaComunicazioni}">
-										<td><a th:text="${#temporals.format(comunicazione.dataUltimaModifica, 'dd/MM/yyyy - HH:mm')}" th:href="@{|/comunicazione/${comunicazione.id}/show|}"></a></td>
+										<td><a th:text="${comunicazione.oggetto}" th:href="@{|/comunicazione/${comunicazione.id}/show|}"></a></td>
 										<td th:text="${comunicazione.mittente.isSegreteria()} ? #{label.segreteria_ecm} : ${comunicazione.mittente.getFullName()}"></td>
 										<td>
 											<div th:each="destinatario, row : ${comunicazione.destinatari}" th:if="${row.index &lt; 3}">
@@ -46,7 +46,7 @@
 										</td>
 										<td th:text="${comunicazione.ambito.nome}"></td>
 										<td th:text="${comunicazione.tipologia.nome}"></td>
-										<td th:text="${comunicazione.oggetto}"></td>
+										<td th:text="${#temporals.format(comunicazione.dataUltimaModifica, 'dd/MM/yyyy - HH:mm')}"></td>
 										<td th:text="${comunicazione.chiusa == true} ? #{label.chiusa} : #{label.aperta}"></td>
 									</tr>
 								</tbody>
