--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -323,6 +323,7 @@
 
 				$(document).ready(function() {
 
+			        $.fn.dataTable.moment('DD/MM/YYYY');
 					$(".datatable-responsive-eventi-provider").DataTable({
 						"bFilter" : false,
 						"bInfo" : false,
@@ -330,7 +331,7 @@
 						 "columnDefs": [
 					                     {"targets": colonne, "width": "1px"},
 					                     {"targets": confermati, "sClass": "center"},
-					                     { "type": 'date-eu', "targets": date},
+// 					                     { "type": 'date-eu', "targets": date},
 					                   ],
 					})
 
